# spydir

./: Cargo.toml  LICENSE  README.md
src/: cli.rs  info.rs  main.rs  walk.rs
src/result/: diff.rs  last.rs  mod.rs  new.rs
